# procode-agent-framework

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT_RULES.md  Dockerfile  GITHUB_DISCUSSION_SEED.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_v0.1.0.md  LICENSE  Makefile  POSTGRESQL_MIGRATION_COMPLETE.md  QUICKSTART.md  README.md  STEP11_PHASE1_COMPLETE.md  STEP11_PHASE2_PLAN.md  __main__.py  alembic.ini  build-frontend.sh  console_app.py  demo_hypervelocity.py  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml  streamlit_app.py  test_agent_prefix.py  test_api_security.py  test_connection.py  test_database.py  test_enhanced_guardrails.py  test_monitoring.py  test_sentry.py  test_sentry_simple.py
a2a_comm/: agent_client.py  agent_discovery.py  agent_orchestrator.py  test_mock_agent.py
alembic/: env.py
api/: admin_api_keys.py
config/: agents_config.json  external_agents.json  external_agents.production.json
core/: agent_router.py  api_key_decorators.py  api_key_middleware.py  conversation_memory.py  custom_request_handler.py  intent_classifier.py  metadata_middleware.py  multi_llm_classifier.py
data/: procode.db
database/: __init__.py  connection.py  models.py
docs/: A2A_COMMUNICATION.md  API_SECURITY.md  CONSOLE_APP.md  CONTEXT_FOR_AI.md  COST_OPTIMIZATION_SUMMARY.md  DATABASE_INTEGRATION.md  DEVELOPMENT_HISTORY.md  DOCKER_DEPLOYMENT.md  DOCKER_LLM_TEST_RESULTS.md  IMPLEMENTATION_GUIDE.md  LOGGING_INFRASTRUCTURE.md  POSTGRESQL_SETUP.md  PRODUCTION_LOGGING.md  README.md  STEP11_API_KEY_IMPLEMENTATION.md  STEP11_API_KEY_SUMMARY.md  STEP11_IMPLEMENTATION_CHECKLIST.md  STEP11_PHASE2_COMPLETE.md  STEP11_PHASE3_COMPLETE.md  STEP11_PHASE4_COMPLETE.md  STEP11_SEQUENCE_DIAGRAMS.md  STEP12_MONITORING_COMPLETE.md  STEP12_TEST_RESULTS.md  STRUCTURE.md  UX_ENHANCEMENT_PROPOSAL.md
external_agents/: ARCHITECTURE.md  DEMO_ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_READINESS.md  QUICKSTART.md  README.md  ROUTING_INTEGRATION.md  (+1 more)
(+104 files in other folders)
